--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/Leenci/Backend-FullStackOpen#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "standard": "^17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
+
 }
